fix: tables on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -61,6 +61,13 @@ header h1 {
   padding-left: 2em;
 }
 
+table {
+  display: block;
+  max-width: 100%;
+  overflow-x: auto;
+  white-space: nowrap;
+}
+
 @media only screen and (max-width: 600px) {
   .post-list-item {
     flex-direction: column;
